# rust_zero

./: Cargo.toml  LICENSE  README.md  errata.md
ch01/: README.md
ch01/mul/: Cargo.toml
ch01/mul/src/: main.rs
ch02/: README.md
ch02/sort/: Cargo.toml
ch02/sort/src/: main.rs
ch03/: README.md
ch03/rwlock/: Cargo.toml
ch03/rwlock/src/: main.rs
ch04/: README.md
ch04/display/: Cargo.toml
ch04/display/src/: main.rs
ch04/iter/: Cargo.toml
ch04/iter/src/: main.rs
ch04/serialize/: Cargo.toml  test.yml
ch04/serialize/src/: main.rs
ch05/: README.md
ch05/markdown/: Cargo.toml
ch05/markdown/src/: lib.rs
ch05/mod_ex2/: Cargo.toml
ch05/mod_ex2/src/: b.rs  main.rs
ch05/mod_ex3/: Cargo.toml
ch05/visibility/: Cargo.toml
ch05/visibility/src/: main.rs
ch06/: README.md
ch06/regex/: Cargo.toml
ch06/regex/benches/: benchmark.rs
ch06/regex/src/: engine.rs  helper.rs  lib.rs  main.rs
ch07/: README.md
ch07/zrsh/: Cargo.toml
ch07/zrsh/src/: helper.rs  main.rs  shell.rs
ch08/: README.md
ch08/ackerman/: Cargo.toml
ch08/ackerman/src/: ackerman_tailcall.rs  main.rs
ch08/dbg_target/: Cargo.toml
ch08/dbg_target/.cargo/: config.toml
ch08/dbg_target/src/: main.rs
ch08/zdbg/: Cargo.toml
ch08/zdbg/src/: dbg.rs  main.rs
ch09/: README.md
ch09/lin_type/: Cargo.toml
ch09/lin_type/codes/: err2.lin  err4.lin  err5.lin  ex1.lin  ex2.lin  ex4.lin  ex7.lin  ex8.lin  parse_err.lin
ch09/lin_type/src/: helper.rs  main.rs
ch09/linz/: Cargo.toml
ch09/linz/codes/: err1.lin  err3.lin  err6.lin  err7.lin  ex3.lin  (+2 more)
ch09/parser/: Cargo.toml
(+11 files in other folders)
