[package]
name = "serialize"
version = "0.1.0"
edition = "2021"
authors = ["Yuuki Takano <ytakanoster@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.9.14"
rmp-serde = "1.0.0"
