[package]
name = "zerosh"
version = "0.1.0"
edition = "2021"
authors = ["Yuuki Takano <ytakanoster@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
rustyline = "10.0.0"
nix = "0.25"
signal-hook = "0.3.14"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
